Fix: overflow

--- a/napelem-ui/src/styles.css
+++ b/napelem-ui/src/styles.css
@@ -6,6 +6,5 @@
 
 body {
     height: 100vh;
-    overflow: hidden;
     margin: 0%;
 }
